--- a/lab-3/Gemfile
+++ b/lab-3/Gemfile
@@ -56,3 +56,5 @@ gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'devise', '~> 4.8'
 
 gem "rest-client", "~> 2.1"
+
+gem "activerecord-import", "~> 1.2"
